--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "connect-livereload": "^0.6.1",
     "express": "^4.18.1",
     "livereload": "^0.9.3",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "normalize.css": "^8.0.1"
   },
   "name": "kitchening",
   "version": "1.0.0",
